--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-{
-    background-color;aquarine
-}
-.img1{width:50%}
-.img2{width:50%}
+body
+ {
+    background-color: aquamarine;
+ }
+ .img1 {width:50%}
+ .img2 {width:50%}
